test/compile_errors/err_implicit_main_check.w
//! expect-check-fail: expected declaration

print("top-level")
